// projects.proto
syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";


// Enums


// Types
message Framework {
    string frameworkId = 1;
    string icon = 2;
    string displayName = 3;
    string keywordName = 4;
    string defaultBuildCommand = 5;
    string defaultProdCommand = 6;
    string defaultOutDir = 7;
    string runtime = 8;
    string name = 9;
    string applicationType = 10;
}

message Repository {
    string repositoryId = 1;
    string projectId = 2;
    string githubRepoId = 3;
    string githubRepoFullName = 4;
    string githubRepoURI = 5;
    string rootDir = 6;
    string createdAt = 7;
    string updatedAt = 8;
    string githubInstallationId = 9;
    string branch = 10;
}

message DeploymentProjectData {
    string name = 1;
    string domain = 2;
    Framework framework = 3;
}

message Deployment {
    string deploymentId = 1;
    string commitHash = 2;
    string status = 3;
    string commitMessage = 4;
    string author = 5;
    string projectId = 6;
    string repositoryId = 7;
    string createdAt = 8;
    string lastDeployedAt = 9;
    string completedAt = 10;
    Repository repository = 11;
    repeated BuildEnvironment buildEnvironment = 12;
    repeated RuntimeEnvironment runtimeEnvironment = 13;
    DeploymentProjectData project = 14;
}



message BuildEnvironment {
    string buildId = 1;
    string startedAt = 2;
}

message RuntimeEnvironment {
    string runtimeId = 1;
    string startedAt = 2;
}

message Project {
    string projectId = 1;
    string name = 2;
    string description = 3;
    Framework framework = 4;
    string domain = 5;
    string buildCommand = 6;
    string prodCommand = 7;
    string createdAt = 8;
    string updatedAt = 9;
    Repository repository = 10;
    string outDir = 11;
    string rootDir = 12;
    repeated EnvironmentVariablesKeyValue environmentVariables = 13;
    repeated Deployment deployments = 14;
}

message EnvironmentVariables {
    string projectId = 1;
    string key = 2;
    string value = 3;
}


message GithubRepository {
    string githubRepoId = 1;
    string githubRepoName = 2;
    string githubRepoFullName = 3;
    string githubRepoURI = 4;
    string githubRepoDefaultBranch = 5;
    repeated string branches = 6;
    bool githubRepoPrivate = 7;
}

message GithubInstallation {
    string githubInstallationId = 1;
    string userId = 2;
    string githubUserName = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message FrameworkUpdates {
    string frameworkId = 1;
    string buildCommand = 2;
    string prodCommand = 3;
}

message ProjectUpdates {
     string name = 1;
     string domain = 2;
     FrameworkUpdates framework = 3;
     string outDir = 4;
}

// Requests

message CreateProjectRequest {
    User authUserData = 1;
    string name = 2;
    string githubRepoId = 3;
    string githubRepoFullName = 4;
    string githubRepoURI = 5;
    string frameworkId = 6;
    string buildCommand = 7;
    string prodCommand = 8;
    string branch = 9;
    string outDir = 10;
    string rootDir = 11;
    repeated EnvironmentVariablesKeyValue environmentVars = 12;
    string description = 13;
    string domain = 14;
    RequestMeta reqMeta= 15;
}

message UpdateProjectRequest {
    User authUserData = 1;
    string projectId = 2;
    ProjectUpdates updates = 3;
    RequestMeta reqMeta= 4;
}

message GetRepositoryRequest {
    User authUserData = 1;
    string projectId = 2;
    RequestMeta reqMeta = 3;
}

message GetAllUserProjectsRequest {
    User authUserData = 1;
    int64 skip = 2;
    int32 limit = 3;
    RequestMeta reqMeta = 4;
}

message DeleteProjectRequest {
    User authUserData = 1;
    string projectId = 2;
    RequestMeta reqMeta = 3;
}

message GetProjectRequest {
    User authUserData = 1;
    string projectId = 2;
    RequestMeta reqMeta = 3;
}

message GetAllDeploymentsRequest {
    User authUserData = 1;
    string projectId = 2;
    int64 skip = 3;
    int32 limit = 4;
    RequestMeta reqMeta = 5;
}

message RedeployRequest {
    User authUserData = 1;
    string deploymentId = 2;
    string projectId = 3;
    RequestMeta reqMeta = 4;
}

message DeleteDeploymentRequest {
    User authUserData = 1;
    string deploymentId = 2;
    string projectId = 3;
    RequestMeta reqMeta = 4;
}

message GetDeploymentRequest {
    User authUserData = 1;
    string projectId = 2;
    string deploymentId = 3;
    RequestMeta reqMeta = 4;
}

message UpsertEnvVarsRequest {
    User authUserData = 1;
    string projectId = 2;
    repeated EnvironmentVariablesKeyValue envs = 3;
    RequestMeta reqMeta = 4;
}

message DeleteEnvVarsRequest {
    User authUserData = 1;
    string projectId = 2;
    repeated string envVarKeys = 3;
    RequestMeta reqMeta = 4;
}

message CreateRepositoryRequest {
    User authUserData = 1;
    string githubRepoId = 2;
    string projectId = 3;
    string githubRepoFullName = 4;
    string githubRepoURI = 5; 
    string branch = 6;
    string rootDir = 7;
    RequestMeta reqMeta = 8;
}

message DeleteRepositoryRequest {
    User authUserData = 1;
    string projectId = 2;
    RequestMeta reqMeta = 3;
}

message GetEnvVarsRequest {
    User authUserData = 1;
    string projectId = 2;
    RequestMeta reqMeta = 3;
}

message GetUserGithubReposRequest {
    User authUserData = 1;
    int64 skip = 2;
    int32 limit = 3;
    RequestMeta reqMeta = 4;
}

message GetGithubRepoRequest {
    User authUserData = 1;
    string githubRepoId = 2;
    RequestMeta reqMeta = 3;
}

message GithubWebhookRequest {
    string payload = 1;
    string signature = 2;
    string eventType = 3;
    RequestMeta reqMeta = 4;
}

message CreateGithubInstallationRequest {
    User authUserData = 1;
    string installation_id = 2;
    RequestMeta reqMeta = 3;
}

message IGetProjectRequest {
    string projectId = 1;
    string domain = 2;
    RequestMeta reqMeta = 3;
}



// Responses
message ProjectResponse {
    int32 code = 1;
    string message = 2;
    Project res = 3;
}

message AllProjectsResponse {
    int32 code = 1;
    string message = 2;
    repeated Project res = 3;
}

message DeploymentResponse {
    int32 code = 1;
    string message = 2;
    Deployment res = 3;
}

message AllDeploymentsResponse {
    int32 code = 1;
    string message = 2;
    repeated Deployment res = 3;
}

message EnvVarsResponse {
    int32 code = 1;
    string message = 2;
    repeated EnvironmentVariables res = 3;
}

message UpsertEnvVarsResponse {
    int32 code = 1;
    string message = 2;
}

message RepositoryResponse {
    int32 code = 1;
    string message = 2;
    Repository res = 3;
}

message FrameworkResponse {
    int32 code = 1;
    string message = 2;
    repeated Framework res = 3;
}

message AllGithubReposResponse {
    int32 code = 1;
    string message = 2;
    repeated GithubRepository res = 3;
}

message GithubRepoResponse {
    int32 code = 1;
    string message = 2;
    GithubRepository res = 3;
}

message DeleteEnvVarsResponse {
    int32 code = 1;
    string message = 2;
    google.protobuf.Empty res = 3;
}

message IGetGithubRepoAccessTokenRequest {
    string githubRepoId = 1;
    RequestMeta reqMeta = 2;
}

message IGetGithubRepoAccessTokenResponse {
    int32 code = 1;
    string message = 2;
    string res = 3;
}

message GithubInstallationResponse {
    int32 code = 1;
    string message = 2;
    GithubInstallation res = 3;
}

message StaleEnvironmentIdsResponse {
    int32 code = 1;
    string message = 2;
    repeated string res = 3;
}

message GetProjectsLinkedToTeamRequest {
    User authUserData = 1;
    string teamId = 2;
    RequestMeta reqMeta = 3;
}

message ProjectsLinkedToTeamResponse {
    int32 code = 1;
    string message = 2;
    repeated ProjectsLinkedToTeamResponseData res = 3;
}

message ProjectsLinkedToTeamResponseData {
    string name = 1;
    string projectId = 2;
}

message CheckDomainAvailabilityRequest {
    User authUserData = 1;
    string domain = 2;
    RequestMeta reqMeta = 3;
}

message CheckDomainAvailabilityResponse {
    int32 code = 1;
    string message = 2;
    DomainAvailabilityResponseData   res = 3;
}

message DomainAvailabilityResponseData {
    bool isAvailable = 1;
}
// Service
service ProjectsService {
    // Project
    rpc CreateProject (CreateProjectRequest) returns (ProjectResponse);
    rpc GetProject (GetProjectRequest) returns (ProjectResponse);
    rpc GetAllUserProjects (GetAllUserProjectsRequest) returns (AllProjectsResponse);
    rpc GetLatestProjects (BulkResourceRequest) returns (AllProjectsResponse);
    rpc UpdateProject (UpdateProjectRequest) returns (ProjectResponse);
    rpc DeleteProject (DeleteProjectRequest) returns (ProjectResponse);
    rpc GetProjectsLinkedToTeam (GetProjectsLinkedToTeamRequest) returns (ProjectsLinkedToTeamResponse);
    rpc CheckDomainAvailability (CheckDomainAvailabilityRequest) returns (CheckDomainAvailabilityResponse);

    // Deployment
    rpc GetDeployment (GetDeploymentRequest) returns (DeploymentResponse);
    rpc GetAllDeployments (GetAllDeploymentsRequest) returns (AllDeploymentsResponse);
    rpc GetLatestDeployments (BulkResourceRequest) returns (AllDeploymentsResponse);
    rpc DeleteDeployment (DeleteDeploymentRequest) returns (DeploymentResponse);
    rpc Redeploy (RedeployRequest) returns (DeploymentResponse);

    // Environment Variables
    rpc UpsertEnvVars (UpsertEnvVarsRequest) returns (UpsertEnvVarsResponse);
    rpc DeleteEnvVars (DeleteEnvVarsRequest) returns (DeleteEnvVarsResponse);
    rpc GetEnvVars (GetEnvVarsRequest) returns (EnvVarsResponse);

    // Repository
    rpc GetRepository (GetRepositoryRequest) returns (RepositoryResponse);
    rpc CreateRepository (CreateRepositoryRequest) returns (RepositoryResponse);
    rpc DeleteRepository (DeleteRepositoryRequest) returns (RepositoryResponse);

    // Github Repository
    rpc GetUserGithubRepos (GetUserGithubReposRequest) returns (AllGithubReposResponse);
    rpc GetGithubRepo (GetGithubRepoRequest) returns (GithubRepoResponse);
    rpc GetGithubInstallation (BodyLessRequest) returns (GithubInstallationResponse);

    rpc GetFrameworks (BodyLessRequest) returns (FrameworkResponse);

    //webhooks
    rpc GithubWebhook (GithubWebhookRequest) returns (google.protobuf.Empty);
    rpc CreateGithubInstallation (CreateGithubInstallationRequest) returns (google.protobuf.Empty);

    
    //internal rpcs
    rpc IGetGithubRepoAccessToken (IGetGithubRepoAccessTokenRequest) returns (IGetGithubRepoAccessTokenResponse);
    rpc IGetProject (IGetProjectRequest) returns (ProjectResponse);
    rpc IGetStaleEnvironmentIds (InternalEmptyRequest) returns (StaleEnvironmentIdsResponse);
}
